tests/snapshots/diff_feature__constraint-2.snap
---
source: tests/diff_feature.rs
expression: a.diff(&b)
---
Standard:
  name: b
  coefficients: []
  sense: NoChange
  rhs: 0
