tests/snapshots/diff_feature__file_comparison-2.snap
---
source: tests/diff_feature.rs
expression: a.diff(&a_copy)
---
constraints:
  altered:
    "c1:":
      Standard:
        name: ~
        coefficients:
          - Altered:
              index: 0
              changes:
                - coefficient: -1
                  var_name: ~
        sense: NoChange
        rhs: 0
  removed: []
objectives: []
problem_name: NoChange
problem_sense: NoChange
variables:
  altered: {}
  removed: []
