tests/snapshots/diff_feature__file_comparison.snap
---
source: tests/diff_feature.rs
expression: a.diff(&a)
---
constraints:
  altered: {}
  removed: []
objectives: []
problem_name: NoChange
problem_sense: NoChange
variables:
  altered: {}
  removed: []
